[package]
name = "picmyweb2"
version = "0.1.2"
edition = "2024"

[dependencies]
indicatif = "0.18.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
headless_chrome = "1.0.18"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
log = "0.4"
env_logger = "0.11"
csv = "1.3"
